<resources>
    <string name="app_name">BumiLoka</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="banner_ad_unit_id">ca-app-pub-6876743825848703/8168196837</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="default_web_client_id" translatable="false">836208037380-q5sh18p66k9v500cbe9i4atd7l09sh00.apps.googleusercontent.com</string>
    <string name="hello_placeholder">Halo, %1$s! \uD83C\uDF0D</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_button_desc">Kembali</string>
    <string name="quiz_header">Quiz Utama</string>
    <string name="tab_all">Semua</string>
    <string name="tab_finished">Selesai</string>
    <string name="tab_not_finished">Belum Selesai</string>
    <string name="quiz_history">Riwayat Quiz</string>
    <string name="materi_1">Materi 1</string>
    <string name="materi_2">Materi 2</string>
    <string name="materi_3">Materi 3</string>
    <string name="skor_90_100">Skor : 90/100</string>
    <string name="status_selesai">Status : Selesai</string>
    <string name="status_belum_dikerjakan">Status : Belum dikerjakan</string>
    <string name="tanggal_10_juni_2026">Tanggal : 10 Juni 2026</string>
    <string name="kerjakan_lagi">Kerjakan Lagi</string>
    <string name="lihat_detail">Lihat detail</string>
    <string name="kerjakan">Kerjakan</string>
    <string name="quiz_title">Kuis Materi 1</string>
    <string name="quiz_question_placeholder">Apa yang harus kita lakukan untuk menjaga lingkungan?</string>
    <string name="quiz_btn_next">Lanjut</string>
    <string name="materi_icon_desc">Ikon Materi</string>
    <string name="materi_1_title">Materi 1: Pengenalan</string>
    <string name="quiz_finished_title">Kuis Selesai!</string>
    <string name="quiz_result_desc">Terima kasih telah menyelesaikan kuis ini.</string>
    <string name="btn_retake">Ulangi Kuis</string>
    <string name="btn_ok">OK</string>
    <string name="title_help_support">Bantuan &amp; Dukungan</string>
    <string name="app_name_eco">Eco Warrior</string>
    <string name="app_slogan">Bersama jaga bumi, mulai dari diri sendiri.</string>
    <string name="title_about">Tentang Aplikasi</string>
    <string name="desc_about">Eco Warrior adalah aplikasi gamifikasi yang membantu pengguna berkontribusi terhadap lingkungan melalui tantangan dan aktivitas ramah lingkungan.</string>
    <string name="title_faq">FAQ</string>
    <string name="desc_faq">Temukan jawaban untuk pertanyaan yang sering diajukan.</string>
    <string name="title_contact">Hubungi Kami</string>
    <string name="desc_contact">Punya pertanyaan atau masukan? Hubungi tim kami.</string>
    <string name="title_info_app">Informasi Aplikasi</string>
    <string name="label_app_name">Nama Aplikasi</string>
    <string name="label_version">Versi</string>
    <string name="value_version">1.0.0</string>
    <string name="label_platform">Platform</string>
    <string name="value_platform">Android</string>
    <string name="label_privacy_policy">Kebijakan Privasi</string>
    <string name="label_developer">Dikembangkan oleh</string>
    <string name="value_developer">Tim Eco Warrior</string>
    <string name="copyright_text">© 2026 Eco Warrior. All Rights Reserved.</string>
    <string name="title_about_app">Tentang Aplikasi</string>
    <string name="about_eco_warrior_title">Tentang Eco Warrior</string>
    <string name="about_eco_warrior_desc">Eco Warrior adalah aplikasi gamifikasi lingkungan yang dirancang untuk meningkatkan kesadaran dan partisipasi pengguna dalam menjaga lingkungan melalui berbagai aktivitas dan tantangan ramah lingkungan.\n\nMelalui sistem poin, lencana, dan level, pengguna dapat memantau perkembangan kontribusi mereka terhadap lingkungan secara menyenangkan dan interaktif.</string>
    <string name="visi_title">Visi</string>
    <string name="visi_desc">Menciptakan generasi yang lebih peduli lingkungan melalui pemanfaatan teknologi digital yang edukatif dan interaktif.</string>
    <string name="misi_title">Misi</string>
    <string name="misi_desc">• Meningkatkan kesadaran lingkungan.\n• Mendorong aksi nyata dalam menjaga lingkungan.\n• Membentuk kebiasaan ramah lingkungan.\n• Memberikan pengalaman belajar yang menyenangkan melalui gamifikasi.</string>
    <string name="fitur_utama_title">Fitur Utama</string>
    <string name="fitur_tantangan_title">Tantangan Lingkungan</string>
    <string name="fitur_tantangan_desc">Menyelesaikan berbagai misi ramah lingkungan.</string>
    <string name="fitur_poin_title">Sistem Poin</string>
    <string name="fitur_poin_desc">Mengumpulkan poin dari aktivitas yang dilakukan.</string>
    <string name="fitur_lencana_title">Lencana Prestasi</string>
    <string name="fitur_lencana_desc">Mendapatkan penghargaan berdasarkan pencapaian.</string>
    <string name="fitur_riwayat_title">Riwayat Aktivitas</string>
    <string name="fitur_riwayat_desc">Melihat perkembangan aktivitas pengguna.</string>
    <string name="faq_header_title">Pertanyaan yang Sering Diajukan</string>
    <string name="faq_header_desc">Temukan jawaban atas pertanyaan yang paling sering ditanyakan pengguna Eco Warrior.</string>
    <string name="faq_footer_text">Tidak menemukan jawaban yang dicari?</string>
    <string name="faq_btn_contact">Hubungi Kami</string>
    <string name="faq_q1">Bagaimana cara mendapatkan poin?</string>
    <string name="faq_a1">Poin diperoleh setelah berhasil menyelesaikan Misi yang tersedia.</string>
    <string name="faq_q2">Bagaimana cara mendapatkan lencana?</string>
    <string name="faq_a2">Lencana diperoleh setelah berhasil menyelesaikan Tantangan yang tersedia.</string>
    <string name="faq_q3">Mengapa poin saya belum bertambah?</string>
    <string name="faq_a3">Pastikan Misi telah diselesaikan dan diverifikasi oleh sistem. Jika masih belum bertambah, coba muat ulang aplikasi.</string>
    <string name="faq_q4">Apakah data aktivitas saya tersimpan?</string>
    <string name="faq_a4">Ya. Riwayat aktivitas akan disimpan sehingga dapat diakses kembali kapan saja.</string>
    <string name="faq_q5">Bagaimana cara menghubungi pengembang?</string>
    <string name="faq_a5">Pengguna dapat menghubungi pengembang melalui menu Hubungi Kami yang tersedia pada halaman Bantuan &amp; Dukungan.</string>
    <string name="contact_us_desc">Kami siap menerima pertanyaan, kritik, saran, dan masukan untuk pengembangan Eco Warrior.</string>
    <string name="contact_email_title">Email</string>
    <string name="contact_email_address">eco.warrior@gmail.com</string>
    <string name="contact_email_btn">Kirim Email</string>
    <string name="contact_whatsapp_title">WhatsApp</string>
    <string name="contact_whatsapp_number">+62 812-3456-7890</string>
    <string name="contact_whatsapp_btn">Chat WhatsApp</string>
    <string name="contact_form_title">Kritik &amp; Saran</string>
    <string name="contact_form_name_hint">Nama</string>
    <string name="contact_form_email_hint">Email</string>
    <string name="contact_form_message_hint">Pesan</string>
    <string name="contact_form_submit_btn">Kirim Masukan</string>
    <string name="contact_footer_version">Eco Warrior v1.0.0</string>
    <string name="contact_form_error_empty">Field ini tidak boleh kosong</string>
    <string name="contact_form_success">Terima kasih atas masukan Anda.</string>
    <string name="notification_title">Notifikasi</string>
    <string name="notification_subtitle">Tetap update aktivitas hijau Anda</string>
    <string name="notification_icon_desc">Ikon Notifikasi</string>
    <string name="unread_label">Belum Dibaca</string>
    <string name="unread_count_placeholder">%1$d Notifikasi</string>
    <string name="chip_reward">Reward</string>
    <string name="chip_activity">Aktivitas</string>
    <string name="chip_system">Sistem</string>
    <string name="sample_badge_count">3</string>
    <string name="jelajahi_materi">Jelajahi Materi</string>
    <string name="deskripsi_misi">Deskripsi Misi</string>
    <string name="content_desc_leaf">Ikon Daun</string>
    <string name="content_desc_eco">Ikon Eco</string>
</resources>